<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tap_to_scan_lot">Tap to Scan</string>
    <string name="incoming_lots">Incoming LOTs</string>
    <string name="ginning_in_progress">Ginning In-Progress</string>
    <string name="drying_in_progress">Drying In-Progress</string>
    <string name="inventory">Inventory</string>
    <string name="dispatch">Dispatch</string>
    <string name="data_sync">Data Sync</string>
    <string name="bale_sync">Bale Data Sync</string>
    <string name="reset_ws">Reset WS Bluetooth</string>
    <string name="log_out">Logout</string>
    <string name="help">Help</string>
    <string name="successfully_sent_for_ginning">Successfully Sent for Ginning</string>
    <string name="lot_id">Lot ID :</string>
    <string name="ginning_pause_alert">Are you sure you want to put Ginning on Hold?</string>
    <string name="ginning_confirm_alert">Are you sure Ginning is completed for the LOT?</string>
    <string name="ginning_shift_change_alert">Are you sure this is the last Bale of this shift? </string>
    <string name="ginning_pause_success">Ginning successfully put on hold. LOT sent for Drying.</string>
    <string name="ginning_completed_success">Successfully completed Ginning</string>
    <string name="drying_completed_success">Successfully completed Drying</string>
    <string name="dispatch_completed_success">Successfully completed Dispatch</string>
    <string name="dispatch_completed_offline_success">Successfully Dispatched Offline</string>
    <string name="offloaded_successfully">Offloaded Successfully</string>
    <string name="truck_no">Truck No: </string>
    <string name="container_no">Container No: </string>
    <string name="lot_no">Lot No: </string>
    <string name="drying_started_on">Drying Started On</string>
    <string name="scan_bale_id">Scan Bale ID</string>
    <string name="bale_creation_summary">Bale Creation Summary</string>
    <string name="total_weight">Total Weight</string>
    <string name="scan_bales_to_dispatch">Scan Bales To Dispatch</string>
    <string name="last_bale_of_shift">Last Bale Of Shift</string>
    <string name="enter_weight_manually">Enter Weight Manually</string>
    <string name="enter_truck_no">Enter Truck No.</string>
    <string name="enter_container_no">Enter Container No.</string>
    <string name="total_weight_to_dispatch">Total Weight to Dispatch</string>
    <string name="total_bales_to_dispatch">Total Number of Bales to Dispatch</string>
    <string name="selected_baleid">Selected Bale ID</string>
    <string name="ginning_on_hold">Ginning on Hold</string>
    <string name="lot_in_process">Lot in Process:</string>
    <string name="new_bales">New Bales</string>
    <string name="currently">Currently:   </string>
    <string name="selected_lots">Selected:</string>
    <string name="complete_drying">Complete Drying</string>
    <string name="empty_ginning_lot">No LOTs currently in Ginning</string>
    <string name="empty_incoming_lots">No LOTs currently trucked in</string>
    <string name="empty_drying_lot">No LOTs currently in Drying</string>
    <string name="send_to_ginning_alert">Are you sure you want to send the lot for ginning?</string>
    <string name="change_warehouse_alert">Are you sure you want to change the warehouse location?</string>
    <string name="complete_drying_alert">Are You sure you want to complete drying?</string>
    <string name="selected_colon">Selected:   </string>
    <string name="empty_inventory_lots">No LOTs currently in Inventory</string>
    <string name="delete_bale_alert">Are you sure You want to delete bales?</string>
    <string name="delete_offline_list_alert">Are you sure You want to delete this item?</string>
    <string name="currently_no_order_to_dispatch">Currently no order to dispatch</string>
    <string name="please_add_bale_before_proceeding">Please add bale before proceeding</string>
    <string name="bale_id_already_exists">Bale Id Already Exists</string>
    <string name="bale_id_not_valid">Not a valid bale Id, Please try again</string>
    <string name="weight_exceed_the_maximum_limit">Weight exceeded the maximum limit</string>
    <string name="deliver_no">Delivery No</string>
    <string name="lots">Lots</string>
    <string name="enter_weight_between_100_350_kg">Enter weight between 100-350kg</string>
    <string name="add_atleast_one_bale_for_this_lot">Add atleast one bale for this lot</string>
    <string name="no_of_bales">No.of Bales:</string>
    <string name="apply">Apply</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="oldest_to_newest">Oldest to Newest</string>
    <string name="select_sorting_option">Select Sorting Option</string>
    <string name="please_select_the_weighing_scale">Please select the Weighing scale</string>
    <string name="not_available">Not Available</string>
    <string name="shift">Shift </string>
    <string name="currently_no_lots_available_for_ginning">Currently no lots available for ginning</string>
    <string name="data_synced_successfully">Data synced successfully</string>
    <string name="do_you_want_exit">Do you want to exit?</string>
    <string name="session_time_out">Your session has expired, plesae login again</string>
    <string name="please_select_any_warehouse_to_proceed">Please select any warehouse to proceed</string>
    <string name="select_any_delivery_num_to_proceed">Select any delivery number to proceed</string>
    <string name="select_valid_delivery">Select valid delivery number</string>
    <string name="classification_of_bales">Classification of Bales</string>
    <string name="mtn_no">MTN No:</string>
    <string name="verified">Verified</string>
    <string name="yet_to_verify">Yet to Verify</string>
    <string name="add_bales">Add Bales</string>
    <string name="bale_summary">Bale Summary</string>
    <string name="bale_stuffing_summary">Bale Stuffing Summary</string>
    <string name="bale_id">Bale ID</string>
    <string name="type">Type</string>
    <string name="action">Action</string>
    <string name="classification_review_and_offload">Classification - Review and Offload</string>
    <string name="good_bales">Good Bales</string>
    <string name="good">Good</string>
    <string name="damaged_bales">Damaged Bales</string>
    <string name="bale_wrap_damage_and_cotton_clean">Bale wrap damage and cotton clean</string>
    <string name="bale_wrap_damage_and_cotton_dirty">Bale wrap damage and cotton dirty</string>
    <string name="bale_tie_damage">Bale tie damage</string>
    <string name="store_in_inventory">Store in Inventory</string>
    <string name="damaged">Damaged</string>
    <string name="new_version_msg">version of the app available. Please install new version to continue</string>
    <string name="new_version_title">NEW VERSION</string>
    <string name="yes">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="logout_alert">Are you sure you want to logout?</string>
    <string name="send_for_ginning">Send For Ginning</string>
    <string name="filter">Filter</string>
    <string name="ok">Ok</string>
    <string name="inventory_bale">Inventory Bale</string>
    <string name="currently_25000_mtns">Currently\n25000 bales</string>
    <string name="first_in">First In</string>
    <string name="last_in">Last In</string>
    <string name="sort_by">Sort by</string>
    <string name="bale_number">Bale No :&#160;</string>
    <string name="type_of_bale">Type of Bale :&#160;</string>
    <string name="inventory_grade">Grade :&#160;</string>
    <string name="bale_ID">Bale ID :&#160;</string>
    <string name="damage_type">Damage Type :&#160;</string>
    <string name="change_bale_to_good">Change Bale to Good</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="inventory_bale_select_grade">Inventory Bale - Select Grade</string>
    <string name="no_grades_found">No Grades found</string>
    <string name="received_from">Received From</string>
    <string name="received_on">Received On</string>
    <string name="back_navigation">back navigation</string>
    <string name="view_container_inventory">View Container\nInventory</string>
    <string name="track_container">Track Container</string>
    <string name="check_for_dispatch">Check for Dispatch</string>
    <string name="no_of_required_container">No of Required Container</string>
    <string name="inventory_container">Inventory Container</string>
    <string name="inventory_of_container">Inventory of Container</string>
    <string name="additional_container">Additional Container</string>
    <string name="added_on">Added on :&#160;</string>
    <string name="container_no_colon">Container No :&#160;</string>
    <string name="container_type_colon">Container Type :&#160;</string>
    <string name="track_container_summary">Track Container - Summary</string>
    <string name="shipping_line">Shipping Line</string>
    <string name="select_shipping_line">Select Shipping Line</string>
    <string name="proceed">Proceed</string>
    <string name="weight">Weight</string>
    <string name="please_select_atleast_one_lot_to_continue">Please select atleast one lot to continue</string>
    <string name="grade_name">Grade Name</string>
    <string name="bales">Bales</string>
    <string name="grade">Grade</string>
    <string name="bale_not_available">Bale not available</string>
    <string name="bale_already_exist">The bale has been already added</string>
    <string name="dispatch_bale_already_exist">Bale already Dispatch on OBD </string>
    <string name="bale_grade_is">Bale Gradle is  </string>
    <string name="diff_grades"> which is different to OBD grade</string>
    <string name="bale_already_mapped_pile">Bale is already mapped to a pile</string>
    <string name="error_bale_id">Bale Id should be ten numeric values</string>
    <string name="confirm_dispatch">Confirm Dispatch</string>
    <string name="deliver_no_is">Delivery No: </string>
    <string name="tran_master_sync">Do you want to proceed transection master sync process?</string>
    <string name="sync_all">Do you want to sync all offline data to cloud?</string>
    <string name="resync">ReSync</string>
    <string name="sync">Sync All</string>
    <string name="bale_not_inventory">The bale is not in inventory</string>
    <string name="bale_out_grades">The bale is out of delivery grades</string>
    <string name="select_option">Select Option</string>
    <string name="option_seed_cotton">Seed Cotton</string>
    <string name="option_incoming_mtn">Incoming MTN</string>
    <string name="incoming_mtn">Incoming MTNs</string>
    <string name="supply_plant_name">Supply Plant Name :&#160;</string>
    <string name="no_of_bales_colon">No of Bales :&#160;</string>
    <string name="select_damage_type">Damage type</string>
    <string name="bale_already_verified">Bale has been already verified</string>
    <string name="dialog_confirm_bale_delete">Confirm deletion of bale</string>
    <string name="update_verified_bales">Please update the verified bales to the inventory to continue</string>
    <string name="view_details">View Details</string>
    <string name="delete_msg">Are you sure? do you want delete this item</string>
    <string name="or">OR</string>
    <string name="add">Add</string>
    <string name="mtns_empty">No MTNS is found</string>
    <string name="view_offline_summary">View Offline Summary</string>
    <string name="pull_weight">Pull Weight</string>
    <string name="select_work_shift">Select Work Shift</string>
    <string name="shift_a">Shift A</string>
    <string name="shift_b">Shift B</string>
    <string name="shift_c">Shift C</string>
</resources>