<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_incoming_lots"
            android:title="@string/incoming_lots" />
        <item
            android:id="@+id/nav_ginning"
            android:title="@string/ginning_in_progress" />
        <item
            android:id="@+id/nav_drying"
            android:title="@string/drying_in_progress" />
        <item
            android:id="@+id/nav_dispatch"
            android:title="@string/dispatch" />
        <item
            android:id="@+id/nav_inventory"
            android:title="@string/inventory" />
        <item
            android:id="@+id/nav_data_sync"
            android:title="@string/data_sync" />

        <item
            android:id="@+id/nav_reset_ws"
            android:visible="false"
            android:title="@string/reset_ws" />
        <item
            android:id="@+id/nav_bale_sync"
            android:title="@string/bale_sync" />

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/log_out" />
    </group>
</menu>
