<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:text="@string/bale_ID"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBaleId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:text="18GRD00987"
                    android:textColor="#FFFFFF"
                    android:textSize="24dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DCDCDC"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="30dp">

                    <Button
                        android:id="@+id/btn_pullweight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pullweight_stylecorner"
                        android:text="@string/pull_weight"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <View
                        android:layout_width="120dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="#808080" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="#000000"
                        android:textSize="14dp" />

                    <View
                        android:layout_width="120dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="#808080" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:padding="15dp"
                    android:text="@string/enter_weight_manually"
                    android:textColor="#000000"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ginnig_rectangle_border"
                    android:gravity="start"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:gravity="start"
                android:text="@string/select_work_shift"
                android:textColor="#000000"
                android:textSize="14dp" />

            <RadioGroup
                android:id="@+id/rgShift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbShiftA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/black"
                    android:checked="false"
                    android:text="@string/shift_a"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbShiftB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/black"
                    android:checked="false"
                    android:text="@string/shift_b"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbShiftC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/black"
                    android:checked="false"
                    android:text="@string/shift_c"
                    android:textColor="#000000"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/cbLastbale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/black"
                android:text="@string/last_bale_of_shift"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#a0c800"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold" />
</LinearLayout>